Topic Service setup

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "InteractDatabaseSettings": {
+    "InteractCollectionName": "Topics",
+    "ConnectionString": "mongodb+srv://admin:admin123@interactdb.mmedc.mongodb.net/interact?retryWrites=true&w=majority",
+    "DatabaseName": "InteractDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
